--- a/shake/index.html
+++ b/shake/index.html
@@ -14,6 +14,7 @@ body {
 	text-align: center;
 }
 </style>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="shake.js"></script>
 </head>
 <body>
@@ -25,6 +26,7 @@ body {
 
 <p><a href="http://dev.w3.org/geo/api/spec-source-orientation">W3C DeviceOrientation Event Specification</a></p>
 
+<div class="text"></div>
 <script type="text/javascript">
 window.onload = function() {
 
@@ -34,9 +36,9 @@ window.onload = function() {
 	function shakeEventDidOccur () {
 	
 		//put your own code here etc.
-		if (confirm("Undo?")) {
+	//	if (confirm("Undo?")) {
 
-		}
+	//	}
 	}
 };
 </script>
